# g2d

./: .clang-format  CMakeLists.txt  update-format.sh  validate-format.sh
.github/workflows/: g2d-lint.yml  g2d-test.yml
binutils/: generate_file_contents_array_source.sh
cmake/: CMakeDetermineMETALCompiler.cmake  CMakeMETALCompiler.cmake.in  CMakeMETALInformation.cmake  CMakeTestMETALCompiler.cmake
examples/test/: CMakeLists.txt  stardew.icns  test_basic.cc
include/g2d/: g2d.h  log.h  utils.h
include/g2d/audio_toolbox/: audio_toolbox.h
include/g2d/common/: log.h  obj_manager.h  object.h  utils.h  vbo.h
include/g2d/gl/: color.h  drawable.h  font.h  gl.h  shader.h
include/g2d/math/: mat2.h  mat3.h  vec2.h  vec3.h  vec4.h
include/g2d/metal/: g2d_window.h  key_process.h  metal.h  metal_headers.h  metal_shader_lib_source.h  mtl_buffer.h  test_main.h
include/g2d/metal/internal/: g2d_app_delegate_objc.h  g2d_library_objc.h  g2d_render_pipeline_objc.h  g2d_utils_objc.h  g2d_window_objc.h
include/g2d/openal/: al.h
include/g2d/opengl/: color.h  drawable.h  font.h  gl.h  shader.h
src/: log.c  utils.c  utils.cc
src/arch_test/: test_avx.s  test_empty.c
src/audio_toolbox/: audio_toolbox.c
src/common/: log.c
src/gl/: drawable.c  font.c  gl.c  shader.c
src/metal/: g2d_app_delegate.m  g2d_library.m  g2d_render_pipeline.m  g2d_utils.m  g2d_window.cc  g2d_window.m  key_process.m  metal_gen.cc  mtl_buffer.cc  mtl_buffer.m  test_main.m  test_ray.cc
src/metal/res/: Info.plist  Main.storyboard  test_ray.metal
src/openal/: al.c
src/opengl/: drawable.c  font.c  gl.c  shader.c
src/opengl/res/: font.fs  font.vs  two.fs  two.vs
test/: .test_ray.cc.swp  CMakeLists.txt  test_adder.metal  test_basic.c  test_basic.cc  test_main.cc  test_primitive.cc  test_ray.cc  test_ray.metal  test_ray_shader.metal  test_render_basic.metal  test_shader_source.h  test_utils.cc  test_utils.h
test/common/: test_log.cc
test/unit/: CMakeLists.txt
test/unit/common/: test_basic.cc  test_log.cc  test_utils.cc  test_utils.h
